# focus-space-wallpaper

./: .gitignore  Cargo.toml  config.example.toml
docs/: SPEC.md  daemon.spec.md  focus.spec.md  nebula.spec.md  risks.spec.md  wallpaper.spec.md
src/: config.rs  daemon.rs  lib.rs  main.rs
src/focus/: analyzer.rs  mod.rs  monitor.rs  state.rs
src/nebula/: blend.rs  colormap.rs  generator.rs  mod.rs  noise_field.rs  raymarcher.rs  stars.rs
src/wallpaper/: mod.rs  setter.rs  transition.rs
