[package]
name = "focus-space-wallpaper"
version = "0.1.0"
edition = "2021"
description = "集中を妨げない静かな深青星雲の壁紙ジェネレーター"

[[bin]]
name = "focus-space-wallpaper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
image = "0.25"
noise = "0.9"
rayon = "1"
rand = "0.8"
rand_chacha = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
